Assets/css/style.css
/*-------------------------------------  Universal Elements */

/* Container */

.container {
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 10px 0px;
}

/* Footer */

footer {
    color: white;
    background-color: black;
    text-align: center;
    height: 60px;
}

.phone-email {
    height: 20px;
    width: auto;
    margin-top: 20px;
}


/*------------------------------------- Landing Page  */

.container-landing {
    scroll-behavior: smooth;
}

.inner-landing {
    padding: 258px 0px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.inner-about {
    padding: 70px 0px;
}


/*------------------------------------- Portfolio Page */

.inner {
    padding: 10px 0px;
}

.project {
    height: 200px;
    width: 200px;
    background-repeat: no-repeat;
    margin: 0 auto;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.project-title {
    padding: 30px 10px 0px 10px;
}

.project-content {
    height: 200px; 
    width: 200px;
    background-color: rgba(255, 255, 255, 0.85);
    visibility: hidden;
}

.project-tags {
    padding: 30px 10px 0px 10px;
}

/* Project Backgrounds */

.foi-app {
    background: url(../Images/foi_200x200.jpg);
}

.straytx {
    background: url(../Images/straytx_200x200.jpg);
}

.skyq {
    background: url(../Images/skyq_200x200.jpeg);
}

.react-game {
    background: url(../Images/react_200x200.png);
}

.e-commerce {
    background: url(../Images/E-commerce_200x200.jpg);
}

.friend-finder {
    background: url(../Images/friends_200x200.jpg);
}

.liri {
    background: url(../Images/liri_200x200.jpeg);
}

.restaurant {
    background: url(../Images/restaurant_200x200.jpeg);
}

.giftastic {
    background: url(../images/hockey_200x200.jpeg);
}

.crystal {
    background: url(../images/crystal_200x200.jpeg)
}

.trivia {
    background: url(../Images/nationalpark_200x200.jpeg);
}

.psychic {
    background: url(../images/psychic_200x200.jpeg)
}

/* Project Hover Effects */

.project:hover .project-content{
    visibility: visible;
}

/* The Modal (background) */
.modal {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
  }
  
  /* Modal Content/Box */
  .modal-content {
    background-color: #fefefe;
    margin: 5% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 70%;
    max-height: 82%;
    overflow: auto;
  }
  
  /* The Close Button */
  .close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

  /* Modal Elements */
  .modal-title {
      text-align: center;
  }

  .modal-summary {
      border-left: 1px solid grey;
  }

  .app-links {
      text-align: center;
      padding-bottom: 20px;
      border-bottom: 1px solid grey;
  }

  .modal-image {
    padding: 20px;
  }

  .modal h4 {
      padding-top: 20px;
      text-align: center;
  }

  .modal p {
      padding: 20px;
      margin: 0;
  }

/*-------------------------------------  Contact Page */

.inner-contact {
    padding: 100px 0px;
}

.contact-img {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

